--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,4 +47,4 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
       - name: Image digest
-        run: echo ${{ step.build-and-publish.outputs.digest}}
+        run: echo ${{ steps.build-and-publish.outputs.digest}}
