--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Set up Docker buildx
-        uses: actions/steup-buildx-action@v2
+        uses: actions/setup-buildx-action@v2
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -44,6 +44,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/flasktest-app:latest
       - name: Image digest
